spacing and alignment fixing 1

--- a/css/Home.module.css
+++ b/css/Home.module.css
@@ -20,8 +20,9 @@
     justify-content: center;
 }
 .expertise{
-    border-radius: 999px;
-  background: linear-gradient(to right, rgba(255,255,255,0.1), rgba(255,255,255,0));
+   border-radius: 6.25rem;
+border: 1px solid rgba(255, 255, 255, 0.10);
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.03) 0%, rgba(255, 255, 255, 0.10) 100%);
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
   padding: 12px 24px;
   color: white;
@@ -30,7 +31,8 @@ margin-right: 0.5rem;
 
 }
 .lets{
-background: linear-gradient(to right, #29F99E, #4EFFFF);
+border: 1px solid #4EFFF0;
+background: linear-gradient(250deg, #29F99E -12.84%, #4EFFF0 118.51%);
 border-radius: 999px;
   padding: 12px 24px;
 color: black;
