--- a/css/navbar.module.css
+++ b/css/navbar.module.css
@@ -8,8 +8,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem 2rem;
-  
-  /* margin: 2rem; */
+  background-color: rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(120px); /* ✅ background blur only */
+  -webkit-backdrop-filter: blur(12px);
 }
 
 .navicon {
@@ -87,17 +88,13 @@
 }
 
 .contact {
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0.1) 10%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  border-radius: 6.25rem;
+border: 1px solid rgba(255, 255, 255, 0.10);
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.03) 0%, rgba(255, 255, 255, 0.10) 100%);
   padding: 1rem;
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  
   color: white;
   padding: 0.75rem 1.5rem;
-  border-radius: 999px;
   backdrop-filter: blur(4px);
   cursor: pointer;
   transition: all 0.2s ease;
